fix: social links gap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -501,7 +501,7 @@ p {
 
 .socialContainer {
   display: flex;
-  gap: 1.5em;
+  gap: 2.1em;
 }
 
 .bottomFooter {
